# libmed

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
apps/: CMakeLists.txt  meddump.c
examples/: CMakeLists.txt  dummy.c  ebneuro_test.c
include/: ebneuro.h
include/med/: eeg.h
python/: CMakeLists.txt  libmed.i
python/pylibmed/: __init__.py
src/: CMakeLists.txt  drivers.h  eeg.c  test.c
src/dummy/: CMakeLists.txt  README.md  dummy.c
src/ebneuro/: CMakeLists.txt  README.md  ebneuro.c  ebneuro.h  ebneuro_private.h  init.c  network.c  packets.h
src/ebneuro/python/: CMakeLists.txt  ebneuro.i
src/include/med/: eeg_priv.h
src/openbci/: CMakeLists.txt  OpenBCI_32bit_Library_Definitions.h  README.md  commands.c  impedance.c  openbci.c  openbci.h  packets.c  packets.h
src/system/: CMakeLists.txt  endiannes.h  helpers.h  linux.c  system.h
src/system/include/system/: helpers.h  system.h
