# SPDX-License-Identifier: GPL-3.0-only

cmake_minimum_required(VERSION 3.10)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

#SET_SOURCE_FILES_PROPERTIES(ebneuro.i PROPERTIES SWIG_FLAGS "-includeall")
swig_add_library(pyebneuro LANGUAGE python SOURCES ebneuro.i)
SWIG_LINK_LIBRARIES(pyebneuro ebneuro ${PYTHON_LIBRARIES})
